Добавила сетку для формы

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>HTML Academy: Кэт энерджи</title>
+  <title>HTML Academy: Каталог продукции сайта Кэт энерджи</title>
   <link rel="preload" href="fonts/oswaldregular.woff2">
   <link rel="preload" href="fonts/oswaldmedium.woff2">
   <link rel="stylesheet" href="css/style.css">
