--- a/source/form.html
+++ b/source/form.html
@@ -12,18 +12,21 @@
 </head>
 
 <body class="page__body">
-  <header class="page-header">
-    <div class="page-header__wrapper">
+  <header class="page-header page-header--background">
+    <div class="page-header__wrapper container">
       <a class="page-header__logo" href="#">
-        <img src="img/logo-mobile.png" width="33" height="38" alt="Логотип сайта Кэт энерджи">
+        <img class="page-header__logo-img" src="img/logo-mobile.png" width="33" height="38"
+          alt="Логотип сайта Кэт энерджи">
       </a>
       <a class="page-header__logo-title" href="#">
-        <img src="" width="101" height="18" alt="Надпись Cat energy">
+        <img src="img/logo 2.svg" width="101" height="18" alt="Надпись Cat energy">
       </a>
+      <button class="page-header__toggle" type="button">
+        <span class="visually-hidden">Открыть меню</span>
+      </button>
+    </div>
+    <div class="page-header--navigation">
       <nav class="main-nav">
-        <button class="main-nav__toggle" type="button">
-          <span class="visually-hidden">Открыть меню</span>
-        </button>
         <ul class="main-nav__list">
           <li class="main-nav__item">
             <a class="main-nav__link" href="index.html">Главная</a>
@@ -40,7 +43,7 @@
   </header>
   <main class="page-main">
     <h1 class="visually-hidden">Магазин фитнесс-питания для котов Кэт энерджи</h1>
-    <div class="program-form__wrapper">
+    <div class="program-form__wrapper container">
       <form class="program-form" action="https://echo.htmlacademy.ru" method="post">
         <section class="program-form__info">
           <h2 class="program-form__title">Подбор программы</h2>
@@ -112,7 +115,7 @@
           </div>
         </fieldset>
         <fieldset class="form-section form-section--comment">
-          <h3 class="form-section__title">Комментарий</h3>
+          <h3 class="form-section__title"><span>Комментарий</span></h3>
           <div class="form-section__field form-section__field--textarea">
             <label class="form-section__item">
               <textarea class="form-section__input form-section__input--textarea" id="comment" name="Комментарий"
@@ -121,7 +124,7 @@
           </div>
         </fieldset>
         <fieldset class="form-section form-section--extra">
-          <h3 class="form-section__title form-section__title--extra">Дополнительно</h3>
+          <h3 class="form-section__title form-section__title--extra"><span>Дополнительно</span></h3>
           <ul class="form-section__list form-section__list--checks">
             <li class="form-section__list-item">
               <label class="form-section__item">
@@ -158,21 +161,21 @@
   </main>
 
   <footer class="page-footer">
-    <div class="page-footer__wrapper">
-      <div class="page-footer__contacts contacts">
-        <h2 class="visually-hidden">Контакты</h2>
-        <div class="contacts__text-wrapper contacts__text-wrapper--white">
-          <p class="contacts__greeting">Приглашаем к сотрудничеству дилеров!</p>
-          <p class="contacts__address">ул. Большая
-            Конюшенная, д. 19/8
-            <span class="contacts__city">Санкт-Петербург</span>
-          </p>
-        </div>
-        <div class="contacts__map" id="map" aria-label="map">
-        </div>
+    <div class="page-footer__contacts contacts">
+      <h2 class="visually-hidden">Контакты</h2>
+      <div class="contacts__text-wrapper container contacts__text-wrapper--white">
+        <p class="contacts__greeting contacts__part">Приглашаем к сотрудничеству дилеров!</p>
+        <p class="contacts__address contacts__part">ул. Большая
+          Конюшенная, д. 19/8
+          <span class="contacts__city">Санкт-Петербург</span>
+        </p>
       </div>
+      <div class="contacts__map" id="map" aria-label="map">
+      </div>
+    </div>
+    <div class="page-footer__bottom container">
       <div class="page-footer__logo">
-        <a class="page-footer__logo-link" href="#">
+        <a class="page-footer__logo-title" href="#">
           <img src="img/logo 2.svg" width="101" height="18" alt="Надпись Кэт энерджи">
         </a>
       </div>
@@ -201,8 +204,8 @@
         <a class="copyright__link" href="https://htmlacademy.ru">
           HTML Academy
         </a>
-        <a class="copyright__link" href="https://htmlacademy.ru">
-          <img class="copyright__logo" src="img/htmlacademy.svg" width="27" height="34" alt="Логотип HTML Academy">
+        <a class="copyright__logo" href="https://htmlacademy.ru">
+          <img src="img/htmlacademy.svg" width="27" height="34" alt="Логотип HTML Academy">
         </a>
       </div>
     </div>
