--- a/source/index.html
+++ b/source/index.html
@@ -43,13 +43,15 @@
   </header>
   <main class="page-main">
     <h1 class="visually-hidden">Магазин фитнесс-питания для котов Кэт энерджи</h1>
-    <section class="intro container">
-      <div class="intro__wrapper">
+    <section class="intro">
+      <div class="intro__wrapper container">
         <h2 class="intro__title">Функциональное питание для котов</h2>
         <p class="intro__lead">Занялся собой? Займись котом!</p>
-        <img class="intro__img" src="img/index-can-mobile1.png" alt="Упаковка основного продукта" width="280"
-          height="270">
-        <a class="intro__link button" href="form.html">Подобрать программу</a>
+        <div class="intro__background">
+          <img class="intro__img" src="img/index-can-mobile1.png" alt="Упаковка основного продукта" width="280"
+            height="270">
+          </div>
+          <a class="intro__link button" href="form.html">Подобрать программу</a>
       </div>
     </section>
     <section class="programs">
@@ -125,7 +127,8 @@
           <div class="slider__images">
             <img class="slider__image slider__image--fat-cat" src="img/before-mobile1.png" width="311" height="232"
               alt="Толстый кот">
-            <img class="slider__image slider__image--slim-cat" src="img/after-desktop.png" width="311" height="232" alt="Стройный кот">
+            <img class="slider__image slider__image--slim-cat" src="img/after-desktop.png" width="311" height="232"
+              alt="Стройный кот">
           </div>
           <div class="slider-controls">
             <label for="fat-cat" class="slider__button slider__button--fat-cat">Было</label>
@@ -143,7 +146,7 @@
   <footer class="page-footer">
     <div class="page-footer__contacts contacts">
       <h2 class="visually-hidden">Контакты</h2>
-      <div class="contacts__text-wrapper container contacts__text-wrapper--white">
+      <div class="contacts__text-wrapper contacts__text-wrapper--white">
         <p class="contacts__greeting contacts__part">Приглашаем к сотрудничеству дилеров!</p>
         <p class="contacts__address contacts__part">ул. Большая
           Конюшенная, д. 19/8
