--- a/source/index.html
+++ b/source/index.html
@@ -45,13 +45,13 @@
     <h1 class="visually-hidden">Магазин фитнесс-питания для котов Кэт энерджи</h1>
     <section class="intro">
       <div class="intro__wrapper container">
-        <h2 class="intro__title">Функциональное питание для котов</h2>
-        <p class="intro__lead">Занялся собой? Займись котом!</p>
+        <h2 class="intro__content intro__title">Функциональное<br>питание для котов</h2>
+        <p class="intro__content intro__lead">Занялся собой? Займись котом!</p>
         <div class="intro__background">
           <img class="intro__img" src="img/index-can-mobile1.png" alt="Упаковка основного продукта" width="280"
             height="270">
-          </div>
-          <a class="intro__link button" href="form.html">Подобрать программу</a>
+        </div>
+        <a class="intro__content intro__link button" href="form.html">Подобрать программу</a>
       </div>
     </section>
     <section class="programs">
@@ -59,13 +59,17 @@
       <div class="programs__wrapper container">
         <ul class="programs__list">
           <li class="programs__item program program--slim">
-            <h3 class="program__title">Похудение</h3>
+            <h3 class="program__title">
+              <span class="program__icon program__icon--slim"></span>Похудение
+            </h3>
             <p class="program__text">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на
               диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
             <a class="program__link" href="catalog.html">Каталог Slim</a>
           </li>
           <li class="programs__item program program--pro">
-            <h3 class="program__title">Набор массы</h3>
+            <h3 class="program__title">
+              <span class="program__icon program__icon--pro"></span>Набор массы
+            </h3>
             <p class="program__text">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro
               поможет
               вашему коту нарастить необходимые мышцы!</p>
@@ -78,20 +82,20 @@
       <div class="features__wrapper container">
         <h2 class="features__title">Как это работает</h2>
         <ul class="features__list">
-          <li class="features__item feature feature--icon-leaf">
-            <p class="feature__text">Функциональное питание содержит только полезные питательные вещества.
+          <li class="features__item features__item--icon-leaf">
+            <p class="features__text">Функциональное питание содержит только полезные питательные вещества.
             </p>
           </li>
-          <li class="features__item feature feature--icon-powder">
-            <p class="feature__text">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
+          <li class="features__item features__item--icon-powder">
+            <p class="features__text">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
             </p>
           </li>
-          <li class="features__item feature feature--icon-fork">
-            <p class="feature__text">Замените один-два приема обычной еды на наше функциональное питание.
+          <li class="features__item features__item--icon-fork">
+            <p class="features__text">Замените один-два приема обычной еды на наше функциональное питание.
             </p>
           </li>
-          <li class="features__item feature feature--icon-clock">
-            <p class="feature__text">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
+          <li class="features__item features__item--icon-clock">
+            <p class="features__text">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
             </p>
           </li>
         </ul>
@@ -108,12 +112,12 @@
           <div class="example__data">
             <div class="example__progress">
               <div class="progress">
-                <span class="progress__title">Снижение веса</span>
+                <span class="progress__title">Снижение<br>веса</span>
                 <span class="progress__value">5 кг</span>
-                <div class="progress">
-                  <span class="progress__title">Затрачено времени</span>
-                  <span class="progress__value">60 ДНЕЙ</span>
-                </div>
+              </div>
+              <div class="progress">
+                <span class="progress__title">Затрачено<br>времени</span>
+                <span class="progress__value">60 ДНЕЙ</span>
               </div>
             </div>
             <p class="example__costs">Затраты на питание:
@@ -159,7 +163,7 @@
     <div class="page-footer__bottom container">
       <div class="page-footer__logo">
         <a class="page-footer__logo-title" href="#">
-          <img src="img/logo 2.svg" width="101" height="18" alt="Надпись Кэт энерджи">
+          <img src="img/logo 2.svg" width="128" height="24" alt="Надпись Кэт энерджи">
         </a>
       </div>
       <div class="page-footer__social social">
