--- a/source/catalog.html
+++ b/source/catalog.html
@@ -12,7 +12,7 @@
 </head>
 
 <body class="page__body">
-  <header class="page-header page-header--background">
+  <header class="page-header">
     <div class="page-header__wrapper container">
       <a class="page-header__logo" href="#">
         <img class="page-header__logo-img" src="img/logo-mobile.png" width="33" height="38"
