--- a/source/form.html
+++ b/source/form.html
@@ -12,7 +12,7 @@
 </head>
 
 <body class="page__body">
-  <header class="page-header page-header--background">
+  <header class="page-header">
     <div class="page-header__wrapper container">
       <a class="page-header__logo" href="#">
         <img class="page-header__logo-img" src="img/logo-mobile.png" width="33" height="38"
@@ -43,8 +43,8 @@
   </header>
   <main class="page-main">
     <h1 class="visually-hidden">Магазин фитнесс-питания для котов Кэт энерджи</h1>
-    <div class="program-form__wrapper container">
-      <form class="program-form" action="https://echo.htmlacademy.ru" method="post">
+    <form class="program-form" action="https://echo.htmlacademy.ru" method="post">
+      <div class="program-form__wrapper container">
         <section class="program-form__info">
           <h2 class="program-form__title">Подбор программы</h2>
           <p class="program-form__text">Заполните анкету и мы подберем<br>программу питания для вашего кота</p>
@@ -97,66 +97,78 @@
         </fieldset>
         <fieldset class="form-section form-section--contacts">
           <h3 class="form-section__title"><span>Контактные данные (владельца кота)</span></h3>
-          <div class="form-section__field">
-            <label class="form-section__item">
-              <span class="form-section__text">E-mail:*</span>
-              <span class="form-section__input-wrapper">
-                <input type="email" class="form-section__input" name="E-mail" placeholder="kuklachev@gmail.com">
-              </span>
-            </label>
-          </div>
-          <div class="form-section__field">
-            <label class="form-section__item">
-              <span class="form-section__text">Телефон:*</span>
-              <span class="form-section__input-wrapper">
-                <input type="tel" class="form-section__input" name="Телефон" placeholder="8 (960) 900-60-90">
-              </span>
-            </label>
+          <div class="program-form__wrapper container">
+            <div class="form-section__field">
+              <label class="form-section__item">
+                <span class="form-section__text">E-mail:*</span>
+                <span class="form-section__input-wrapper">
+                  <input type="email" class="form-section__input" name="E-mail" placeholder="kuklachev@gmail.com">
+                  <svg class="form-section__icon" xmlns="http://www.w3.org/2000/svg" width="17" height="13">
+                    <use xlink:href="#icon-mail"></use>
+                  </svg>
+                </span>
+              </label>
+            </div>
+            <div class="form-section__field">
+              <label class="form-section__item">
+                <span class="form-section__text">Телефон:*</span>
+                <span class="form-section__input-wrapper">
+                  <input type="tel" class="form-section__input" name="Телефон" placeholder="8 (960) 900-60-90">
+                  <svg class="form-section__icon" xmlns="http://www.w3.org/2000/svg" width="20" height="20">
+                    <use xlink:href="#icon-phone"></use>
+                  </svg>
+                </span>
+              </label>
+            </div>
           </div>
         </fieldset>
         <fieldset class="form-section form-section--comment">
           <h3 class="form-section__title"><span>Комментарий</span></h3>
-          <div class="form-section__field form-section__field--textarea">
-            <label class="form-section__item">
-              <textarea class="form-section__input form-section__input--textarea" id="comment" name="Комментарий"
-                cols="28" rows="5" maxlength="450" placeholder="Расскажите обо всех повадках кота"></textarea>
-            </label>
+          <div class="container">
+            <div class="form-section__field form-section__field--textarea">
+              <label class="form-section__item">
+                <textarea class="form-section__input form-section__input--textarea" id="comment" name="Комментарий"
+                  cols="28" rows="5" maxlength="450" placeholder="Расскажите обо всех повадках кота"></textarea>
+              </label>
+            </div>
           </div>
         </fieldset>
         <fieldset class="form-section form-section--extra">
           <h3 class="form-section__title form-section__title--extra"><span>Дополнительно</span></h3>
-          <ul class="form-section__list form-section__list--checks">
-            <li class="form-section__list-item">
-              <label class="form-section__item">
-                <input type="checkbox" class="form-section__checkbox visually-hidden" name="sweetener" checked>
-                <span class="form-section__text form-section__text--checkbox">Сахарозаменитель</span>
-              </label>
-            </li>
-            <li class="form-section__list-item">
-              <label class="form-section__item">
-                <input type="checkbox" class="form-section__checkbox visually-hidden" name="water">
-                <span class="form-section__text form-section__text--checkbox">Питьевая вода</span>
-              </label>
-            </li>
-            <li class="form-section__list-item">
-              <label class="form-section__item">
-                <input type="checkbox" class="form-section__checkbox visually-hidden" name="milk">
-                <span class="form-section__text form-section__text--checkbox">Молоко</span>
-              </label>
-            </li>
-            <li class="form-section__list-item">
-              <label class="form-section__item">
-                <input type="checkbox" class="form-section__checkbox visually-hidden" name="vitamins">
-                <span class="form-section__text form-section__text--checkbox">Витамины</span>
-              </label>
-            </li>
-          </ul>
+          <div class="container">
+            <ul class="form-section__list form-section__list--checks">
+              <li class="form-section__list-item">
+                <label class="form-section__item">
+                  <input type="checkbox" class="form-section__checkbox visually-hidden" name="sweetener" checked>
+                  <span class="form-section__text form-section__text--checkbox">Сахарозаменитель</span>
+                </label>
+              </li>
+              <li class="form-section__list-item">
+                <label class="form-section__item">
+                  <input type="checkbox" class="form-section__checkbox visually-hidden" name="water">
+                  <span class="form-section__text form-section__text--checkbox">Питьевая вода</span>
+                </label>
+              </li>
+              <li class="form-section__list-item">
+                <label class="form-section__item">
+                  <input type="checkbox" class="form-section__checkbox visually-hidden" name="milk">
+                  <span class="form-section__text form-section__text--checkbox">Молоко</span>
+                </label>
+              </li>
+              <li class="form-section__list-item">
+                <label class="form-section__item">
+                  <input type="checkbox" class="form-section__checkbox visually-hidden" name="vitamins">
+                  <span class="form-section__text form-section__text--checkbox">Витамины</span>
+                </label>
+              </li>
+            </ul>
+          </div>
         </fieldset>
         <section class="program-form__submit">
           <button class="program-form__submit-button button">Отправить заявку</button>
           <p class="program-form__note"><sup>*</sup> — Обязательные поля</p>
         </section>
-      </form>
+    </form>
     </div>
   </main>
 
