--- a/source/index.html
+++ b/source/index.html
@@ -15,7 +15,7 @@
 <body class="page__body">
 
   <div style="display: none">
-    <include src="build/img/vector/sprite.svg"></include>
+    <include src="img/vector/sprite.svg"></include>
   </div>
   <header class="page-header page-header--background">
     <div class="page-header__wrapper container">
